--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta charset="UTF-8" />
    <link rel="shortcut icon" href="src/assets/img/icon-drluis.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Dr Luis</title>
+    <meta name="description" content="Dr. Luis Paulo Ramos, ortopedista e traumatologista com especialização em ombro e cotovelo, experiência em hospitais renomados, supervisor de residência médica e coordenador de departamento.">
+    <title>Dr. Luis Paulo Ramos | Ortopedia e Traumatologia</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
